provider: add user metadata
